(4/11/12) - v9.0.17 - output fix
- Fixed: Output in reduced output is now more specific
(4/8/12) - v9.0.16 - locale fix
- Fixed: POLISH.yml had missing info
(3/29/12) - v9.0.15 - fixed load
- Fixed: Softdepend wasn't defined properly.
- Updated: dependency for pom, now compiling against RB
- Added: New option to reduce the output of chest stock
- Added: New option to change the URL used for updating
- Added: Wooden plank species
(3/18/12) - v9.0.14 - exploit fix
- Updated: dependencies for pom
- Fixed: ShopDestructionEvent firing when no block was destroyed
- Fixed: Placing block when selling to shop
(2/27/12) - v9.0.13 - bugfix
- Fixed: players can again break shops
- Fixed: Physics event no longer blocked
(2/25/12) - v9.0.12 - critical bugfix
- Fixed: infinite loop writting a massive file in update command
- Fixed: no permission for shop chests
- Fixed: Regex wasn't loading right
(2/22/12) - v9.0.11 - bugfix
- Fixed: Currency config didn't read properly
(2/22/12) - v9.0.10 - tweak
- Fixed: Minor logic issue
(2/21/12) - v9.0.9 - event
- Added: Shop destruction event
- Added: Shop interaction event
- Added: Longer currency names. WARNING: If your currency section used longer names, the single character signs WILL NOT WORK!
- Added: Update command
(2/18/12) - v9.0.8 - feature
- Added: Better configuration for shop buy / sell matching
(2/17/12) - v9.0.7 - refactor
- Changed: More code is put into ShopHelpers, cleans up the listener and some shop stuff
- Fixed: Access to double chests is now covered by PhysicalShop
- Added: Better name recognition and output for Monster Eggs (silverfish blocks) and Smooth Brick
(2/17/12) - v9.0.6 - bugfix
- Fixed: No longer create a chest next to a chest that is part of a shop of which you aren't owner
(2/15/12) - v9.0.5 - bugfix
- Fixed: Custom event for shop creation should no longer be thrown if event cancelled
(2/15/12) - v9.0.4 - fixed reload config
- Fixed: Enabling name service when reloading config